Fix stupid mistake on collapsable... :(

--- a/src/components/collapsable/collapsable.css
+++ b/src/components/collapsable/collapsable.css
@@ -1,45 +1,46 @@
 oui-collapsable .oui-collapsable__title {
-    display: flex;
-    align-items: center;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 0.25em 0.25em 0 0;
-    padding: 0.5em 0.3em 0.5em 0;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 0.25em 0.25em 0 0;
+  padding: 0.5em 0.3em 0.5em 0;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  cursor: pointer;
 }
 
 oui-collapsable .oui-collapsable__title:hover {
-    border-color: rgba(0, 0, 0, 0.5);
+  border-color: rgba(0, 0, 0, 0.5);
 }
 
 oui-collapsable .oui-collapsable__title oui-svg {
-    margin: 0 0.6em;
-    transform: rotate(180deg);
-    transition: all 0.15s linear;
-    opacity: 0.5;
-}
-oui-collapsable .oui-collapsable__title:hover oui-svg {
-    opacity: 1;
+  margin: 0 0.6em;
+  transform: rotate(180deg);
+  transition: all 0.15s linear;
+  opacity: 0.5;
 }
 
-oui-collapsable[collapsed] .oui-collapsable__title oui-svg {
-    transform: rotate(0deg);
+oui-collapsable .oui-collapsable__title:hover oui-svg {
+  opacity: 1;
+}
+
+oui-collapsable[expanded] .oui-collapsable__title oui-svg {
+  transform: rotate(0deg);
 }
 
 oui-collapsable .oui-collapsable__content {
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-top-color: transparent;
-    border-radius: 0 0 0.25em 0.25em;
-    padding: 0;
-    margin-top: -1px;
-    overflow: hidden;
-    height: 0;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-top-color: transparent;
+  border-radius: 0 0 0.25em 0.25em;
+  padding: 0;
+  margin-top: -1px;
+  overflow: hidden;
+  height: 0;
 }
 
-oui-collapsable[collapsed] .oui-collapsable__content {
-    padding: 0.5em;
-    height: auto;
+oui-collapsable[expanded] .oui-collapsable__content {
+  padding: 0.5em;
+  height: auto;
 }
